--- a/FinalProject/Views/Shared/_Layout.cshtml
+++ b/FinalProject/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Dev Tools Search Angine", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Dev Tools Search Engine", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse navigation">
                 <ul class="nav navbar-nav">
